--- a/package.json
+++ b/package.json
@@ -57,6 +57,9 @@
 		]
 	},
 	"dependencies": {
+		"@fortawesome/fontawesome": "^1.1.8",
+		"font-awesome": "^4.7.0",
+		"free": "^1.0.0",
 		"prop-types": "^15.7.2",
 		"query-string": "^7.0.1",
 		"react": "^17.0.2",
